--- a/configs/mnist.yaml
+++ b/configs/mnist.yaml
@@ -3,6 +3,6 @@ seed_everything: 123
 trainer:
   max_epochs: 20
 model:
-  class_path: src.models.MNISTModel
+  class_path: MNISTModel
 data:
-  class_path: src.datamodules.MNISTDataModule
+  class_path: MNISTDataModule
