--- a/configs/mrpc.yaml
+++ b/configs/mrpc.yaml
@@ -3,12 +3,12 @@ seed_everything: 123
 trainer:
   max_epochs: 30
 model:
-  class_path: src.models.glue_transformer.GLUETransformer
+  class_path: GLUETransformer
   init_args:
     model_name_or_path: bert-base-uncased
     max_length: 256
 data:
-  class_path: src.datamodules.glue_datamodule.GLUEDataModule
+  class_path: GLUEDataModule
   init_args:
     task_name: mrpc
     batch_size: 32
