--- a/configs/presets/default.yaml
+++ b/configs/presets/default.yaml
@@ -1,18 +1,8 @@
 seed_everything: 42
 trainer:
   logger:
-    - class_path: src.utils.loggers.TensorBoardLogger
-      init_args:
-        save_dir: "results"
-    - class_path: src.utils.loggers.CSVLogger
-      init_args:
-        save_dir: "results"
-    # - class_path: src.utils.loggers.WandbLogger
-    #   init_args:
-    #     save_dir: "results"
-    # - class_path: src.utils.loggers.NeptuneLogger
-    #   init_args:
-    #     project: username/lightning-template
-    #     save_dir: "results"
+    class_path: TensorBoardLogger
+    init_args:
+      save_dir: "results"
   accelerator: "auto"
   devices: 1
