Add default_root_dir into default.yaml

--- a/configs/presets/default.yaml
+++ b/configs/presets/default.yaml
@@ -1,11 +1,12 @@
 seed_everything: 42
 trainer:
+  default_root_dir: results
   callbacks:
     class_path: Metric
   logger:
     class_path: TensorBoardLogger
     init_args:
-      save_dir: "results"
-  accelerator: "auto"
+      save_dir: results
+  accelerator: auto
   auto_select_gpus: true
   devices: 1
