Upgrade to lightning 2.0

--- a/configs/presets/default.yaml
+++ b/configs/presets/default.yaml
@@ -4,7 +4,7 @@ trainer:
   callbacks:
     class_path: Metric
   logger:
-    class_path: TensorBoardLogger
+    class_path: CSVLogger
     init_args:
       save_dir: results
   accelerator: auto
