--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,22 +11,22 @@ repos:
       - id: check-executables-have-shebangs
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.230
+    rev: v0.0.256
     hooks:
       - id: ruff
 
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.1.0
     hooks:
       - id: black
 
   - repo: https://github.com/kynan/nbstripout.git
-    rev: 0.6.0
+    rev: 0.6.1
     hooks:
       - id: nbstripout
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.0.0-alpha.6
     hooks:
       - id: prettier
         types: [yaml]
