--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 --find-links https://download.pytorch.org/whl/cu113/torch_stable.html
-torch >= 1.12.0
-torchvision >= 0.13.0
-pytorch-lightning >= 1.9.0
+torch >= 2.0.0
+lightning >= 2.0.0
+torchvision
 jsonargparse[signatures] # for CLI
 
-transformers >= 4.25.0
-datasets >= 2.8.0
+transformers
+datasets
+evaluate
 scikit-learn
 
 # dev tools
