--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 layout conda lit-template
 export PATH=$PWD:$PWD/scripts:$PATH
 export PYTHONPATH=$PWD${PYTHONPATH:+":$PYTHONPATH"}
-dotenv
+[ -f .env ] && dotenv
